# IELTS-FORM

./: .gitignore  IELTSForm.spec  README.md  WINDOWS_BUILD_EXPLANATION.md  generate_icon.py  ielts_form_gtk.py  ielts_form_tkinter.py  install_desktop_entry.sh
packaging/deb/: build_deb.sh  build_deb_tkinter.sh
packaging/qt/: build_linux.sh  build_windows.ps1
packaging/windows/: build_exe.ps1
qt_app/: CMakeLists.txt
qt_app/src/: MainWindow.cpp  MainWindow.h  SectionPanel.cpp  SectionPanel.h  main.cpp
